--- a/Flights_Project/test-output/old/Default suite/classes.html
+++ b/Flights_Project/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>flights_testcases.Book_Flight1</td>
+<td>flights_testcases.NewUserReg</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>user_able_to_book_flight</td>
+<td>cretateUser</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
